--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -4,17 +4,20 @@
 {% block title %}{{ book.title }}{% endblock title %}
 
 {% block content %}
-    <div class="book-detail">
-        <h2><a href="">{{ book.title }}</a></h2>
-        <p>Author: {{ book.author }}</p>
-        <p>Price: {{ book.price }}</p>
-        <div>
-            <h3>Reviews</h3>
-            <ul>
-                {% for review in book.reviews.all %}
-                    <li>{{ review.review }} ({{ review.author }})</li>
-                {% endfor %}
-            </ul>
-        </div>
+  <div class="book-detail">
+    {% if book.cover %}
+      <img src="{{ book.cover.url}}" alt="{{ book.title }}" class="w-50 rounded-left">
+    {% endif %}
+    <h2><a href="">{{ book.title }}</a></h2>
+    <p>Author: {{ book.author }}</p>
+    <p>Price: {{ book.price }}</p>
+    <div>
+      <h3>Reviews</h3>
+      <ul>
+        {% for review in book.reviews.all %}
+        <li>{{ review.review }} ({{ review.author }})</li>
+        {% endfor %}
+      </ul>
     </div>
+  </div>
 {% endblock content %}
